Fix nodeBuds paragraph alignment, turnback class
This commit fixes the second paragraph's alignment in mobile view to
render properly. It also fixes a minor capitalization error ("nodebuds"
to "nodeBuds").

This commit also adds the groundwork for potential future refactoring:
the CSS variables --fluid-font-size, --p-font-size and --h-font-size-med
were introduced to slowly replace the previous fluidSize mixin.

The --fluid-font-size uses the CSS clamp() math function to achieve
smoothly scalable font sizes across all viewports unlike setting manual
font-sizes over @media. This behavior is almost similar to the mixin.
Its intended use case is to be set at the parent container (or the
body). Note that this affects the margins and paddings if they use em as
well.

The two new font size variables, --p-font-size and --h-font-size-med,
are in em units to properly utilize the above --fluid-font-size set in
the parent container. The em units will scale accordingly. This is
different from using px, which is scaled absolutely (as opposed to
relatively to the parent's font-size).

--- a/static/global.css
+++ b/static/global.css
@@ -26,9 +26,54 @@ body,
 
   --desktop-breakpoint: 768px;
 
+  /* Fluid font size is the magical numbers for fluid font sizing. It should be
+   * put into parent containers. */
+  --fluid-font-size: clamp(1vw, 0.7em, 3vw);
+
+  --p-font-size: 2em;
+  --h-font-size-med: 3em;
+
   --min-p-font-size: 18px;
   --max-p-font-size: 36px;
   --min-h-font-size: 22px;
   --max-h-font-size: 86px;
   --max-h-font-size-med: 64px;
+}
+
+/* Branding Macros */
+.brand-em {
+  /* `em` is short for "emphasis" */
+  font-weight: 700;
+}
+
+.headers {
+  font-weight: 600;
+}
+
+.brand-blue {
+  color: var(--acm-blue);
+}
+
+.brand-bluer {
+  color: var(--acm-bluer);
+}
+
+.brand-pink {
+  color: var(--acm-pink);
+}
+
+.brand-purple {
+  color: var(--acm-purple);
+}
+
+.brand-red {
+  color: var(--acm-red);
+}
+
+.brand-dark {
+  color: var(--acm-dark);
+}
+
+.brand-light {
+  color: var(--acm-light);
 }
